horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@
   src: url('font/Pangram-Regular.otf');
 }
 
-body{
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
   font-family: 'AlbraBold';
 }
 
